# qihang_SDUST_OpenHarmony

./: LICENSE  README.md  答辩PPT.pptx
docker脚本/: build_mycode.sh  create_env.sh  exec_env.sh
实验附加蜂鸣器/: BUILD.gn  build_gn_fix.txt  kunkun_module.c  wav_to_txt_encode.cpp
综合性项目实验代码/: BUILD.gn  E53_IA1.c  dbg.c  gui.c  led_screen_main.c  motor_module.c  oled.c  sht3x_i2c.c  spi_screen.c  test.c  wifi_connect.c  智能风扇UDP指令.txt
综合性项目实验代码/include/: E53_IA1.h  base_type.h  bmp.h  dbg.h  gui.h  motor_module.h  oled.h  oled_module.h  oledfont.h  sht3x_i2c.h  spi_screen.h  test.h
