# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# oc_mqtt
static_library("motor_module") {
    sources = [
        "motor_module.c",
        "sht3x_i2c.c",
        "oled.c",
        "spi_screen.c",
        "led_screen_main.c",
        "test.c",
        "gui.c",
        "dbg.c",
        "E53_IA1.c",
        "oc_mqtt_profile_package.c",
        "oc_mqtt.c",
        "wifi_connect.c"
    ]
    
    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]
    
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
        "//vendor/hisi/hi3861/hi3861/third_party/paho_mqtt",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/include",
        "//device/board/isoftstone/qihang/app/include",
        "//third_party/cJSON",
        "./include/",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/include/"
    ]
    deps = [ 
    "../../third_party/paho_mqtt:pahomqtt_static",
    ]

}
